# Snake

./: .gitignore  CMakeLists.txt  LICENSE
snake_game/: CMakeLists.txt
snake_game/source/: main.cpp
